# Logos

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
objects/: logo_geo.fbx
src/: main.cpp
